formver.compiler-plugin/testData/diagnostics/conversion/classes/acc_precondition.kt
// RENDER_PREDICATES
// NEVER_VALIDATE

import org.jetbrains.kotlin.formver.plugin.*

class X(@property:Manual var a: Any)
fun <!VIPER_TEXT!>test_acc_precondition<!>(x: X) {
    preconditions { acc(x.a, write) }
    x.a = 123
}
